--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -13,3 +13,5 @@ jobs:
         uses: actions/checkout@v2
       - name: Lint Code Base
         uses: docker://github/super-linter:v3
+        env:
+          VALIDATE_ALL_CODEBASE: true
