--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
+    "popper.js": "^1.16.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
