--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mezidia",
+  "name": "Mezidia",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
     "popper.js": "^1.16.1",
