--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
+    "emailjs-com": "^2.6.4",
     "popper.js": "^1.16.1",
     "vue": "^3.0.0"
   },
