--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,23 @@
 name: Build Vue
-on: [push]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    name: Lint project
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 15
+    - run: npm ci
+    - run: npm run lint
+
   build_vue:
+    needs: lint
     runs-on: ubuntu-latest
     name: Build Vue
     steps:
